<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/margin_8"
    android:layout_marginEnd="@dimen/margin_8"
    android:layout_marginBottom="@dimen/margin_8"
    android:background="@drawable/rounded_edit_text"
    android:padding="@dimen/margin_8">

    <br.com.lucaspires.tibiainfotracker.presentation.ui.view.custom.TibiaPairTextView
        android:id="@+id/textViewHouseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:firstText="@string/name"
        app:layout_constraintEnd_toStartOf="@+id/imageViewNews"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:leftIcon="@drawable/ic_home_selected" />

    <br.com.lucaspires.tibiainfotracker.presentation.ui.view.custom.TibiaPairTextView
        android:id="@+id/textViewHouseRent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:firstText="@string/rent"
        app:layout_constraintEnd_toStartOf="@+id/imageViewNews"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHouseName"
        app:leftIcon="@drawable/ic_gold_coin" />

    <br.com.lucaspires.tibiainfotracker.presentation.ui.view.custom.TibiaPairTextView
        android:id="@+id/textViewHouseSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:firstText="@string/size"
        app:layout_constraintEnd_toStartOf="@+id/imageViewNews"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHouseRent"
        app:leftIcon="@drawable/ic_home_size" />

    <br.com.lucaspires.tibiainfotracker.presentation.ui.view.custom.TibiaPairTextView
        android:id="@+id/textViewHouseStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:firstText="@string/situation"
        app:layout_constraintEnd_toStartOf="@+id/imageViewNews"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHouseSize"
        app:leftIcon="@drawable/ic_contract" />

    <ImageView
        android:id="@+id/imageViewNews"
        android:layout_width="@dimen/mid_icon_size"
        android:layout_height="@dimen/mid_icon_size"
        android:layout_gravity="center_vertical"
        android:src="@drawable/ic_touch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>